--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,12 @@
   <groupId>testing-mvn</groupId>
   <artifactId>testing-mvn</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version>
+</dependency>
+
+  </dependencies>
 </project>
